# OOP-Labs

./: CMakeLists.txt  README.md  main.cpp
1/: CMakeLists.txt  main.cpp
1/include/: gcd.h
1/src/: gcd.cpp
1/test/: test.cpp
2/: CMakeLists.txt  main.cpp
2/include/: seven.h  vector.h
2/src/: seven.cpp  vector.cpp
2/tests/: tests.cpp
include/: figure.h  figure.hpp  figure.ipp  pentagon.h  point.hpp  point.ipp  rectangle.hpp  rectangle.ipp  rhombus.h  rhombus.hpp  rhombus.ipp  trapezoid.h  trapezoid.hpp  trapezoid.ipp  vector.h  vector.hpp  vector.ipp
src/: figure.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp  vector.cpp
tests/: tests.cpp
